+Fixed Nuget config +Added Master Debug config

--- a/Detekonai.Core.Common/Detekonai.Core.Common.csproj
+++ b/Detekonai.Core.Common/Detekonai.Core.Common.csproj
@@ -11,6 +11,9 @@
     <RepositoryUrl>https://github.com/aeai/detekonai-common.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes />
+    <Configurations>Debug;Release;MasterDebug</Configurations>
+    <Authors>Aeai</Authors>
+    <Company>Detekonai</Company>
   </PropertyGroup>
 
 </Project>
